Sidebar: fix for collapsed sidebar - show 2nd level menu

--- a/src/css/theme/components/_sidebar.scss
+++ b/src/css/theme/components/_sidebar.scss
@@ -214,7 +214,6 @@ a.al-sidebar-list-link {
       top: -1px;
       left: 52px;
       @include bg-translucent-dark(0.8);
-      width: 0;
       display: block;
       overflow: hidden;
       transition: width 0.5s ease;
